Added HTML doctype to devtools.html

--- a/devtools.html
+++ b/devtools.html
@@ -1,3 +1,4 @@
-<!-- This HTML file simply runs this JavaScript File -->
+<!DOCTYPE html>
+<!-- This HTML file simply runs the devtools JavaScript File -->
 <!-- You're probably looking for devtoolsPanel.html :) -->
 <script src="devtools.js"></script>
