Changed instructions slightly

--- a/devtoolsPanel.html
+++ b/devtoolsPanel.html
@@ -57,9 +57,9 @@
         <!-- Breakout Room Buttons Get Put Here by devtoolsPanel.js -->
     </div>
     <div class="container">
-        <p>Step 6: After selecting a breakout room, fully join it and wait for the "Join breakout room" prompt to come up.
-            This appears because you are not in your correct breakout room. To get rid of this popup, simply press the
-            button below.</p>
+        <p>Step 6: After selecting a breakout room, fully join it and wait for the "Join breakout room" prompt to appear.
+            This pops up because you are not in your assigned breakout room. To get rid of this popup, simply press the
+            button below. (Note: This button can also be used to stay in the main meeting when breakout rooms first begin.)</p>
         <button id="modalRemoval">Remove Join Prompt</button>
         <p>Step 7: Done. You are now in a breakout room you are not supposed to be in. To join a different breakout
             room, begin again at Step 5.</p>
